@@ -4,6 +4,8 @@
   creating many heavy theme-aware icons, and let them update
 * cpu, net plugins: linux specific code was put into ifdefs and stub for another case wwas created
 * system menu icon was renamed to logo.png from star.png
+* strip moved to separete target and not done automatically after compile
+* by default make leaves output as is, to see summaries only run 'make Q=1'
 
 
 5.2
